# Python.NFGrab

./: .gitignore  CHANGELOG.md  README.md  nfgrab.py  pyproject.toml
output/3270nf/: README.md
output/agavenf/: README.md
output/anonymouspronf/: README.md
output/arimonf/: README.md
output/aurulentsansmononf/: README.md
output/bigblueterminalnf/: README.md
output/bitstreamverasansmononf/: README.md
output/cascadiacodenf/: README.md
output/codenewromannf/: README.md
output/cousinenf/: README.md
output/daddytimemononf/: README.md
output/dejavusansmononf/: README.md
output/droidsansmononf/: README.md
output/firacodenf/: README.md
output/firamononf/: README.md
output/go-mononf/: README.md
output/gohunf/: README.md
output/hacknf/: README.md
output/hasklignf/: README.md
output/heavydatanf/: README.md
output/hermitnf/: README.md
output/ibmplexmononf/: README.md
output/inconsolatalgcnf/: README.md
output/iosevkanf/: README.md
output/jetbrainsmononf/: README.md
output/lektonnf/: README.md
output/liberationmononf/: README.md
output/lilexnf/: README.md
output/meslonf/: README.md
output/monofurnf/: README.md
output/monoidnf/: README.md
output/mononokinf/: README.md
output/mplusnf/: README.md
output/notonf/: README.md
output/opendyslexicnf/: README.md
output/overpassnf/: README.md
output/proggycleannf/: README.md
output/robotomononf/: README.md
templates/: VERIFICATION.txt  chocolateyBeforeModify.ps1  chocolateyInstall.ps1  chocolateyUninstall.ps1  description.md  paths.json  {{fontFamilyLower}}.nuspec
(+182 files in other folders)
