[tool.poetry]
name = "python.nfgrab"
version = "2022"
description = ""
license = "mit"

[tool.poetry.dependencies]
python = "^3.8"
pystache = "^0.6.0"
metprint = "^2021"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
